Stack Overflow brand fixes

--- a/_sass/_base.sass
+++ b/_sass/_base.sass
@@ -397,7 +397,6 @@ section
 
 #vendorStrip
 	position: relative
-	white-space: nowrap
 
 	ul
 		float: left
@@ -410,87 +409,26 @@ section
 		display: block
 		height: 100%
 		color: white
+		font-size: 0.75em
+		font-weight: bold
 
 	li + li, #search
-		margin-left: 60px
+		margin-left: 20px
 
 	#search
+		display: block
 		position: relative
-		float: right
-		width: 24%
+		width: 100%
 		min-width: 250px
 		padding: 0 10px
-		margin: 8px 30px 0 0
+		margin: 0
 		height: 30px
 		line-height: 30px
-		border: 1px solid $light-grey
+		border: 0
+		background-color: $dark-grey
 		font-size: 16px
+		clear: both
 
-	.dropdown
-		position: relative
-		float: right
-		height: 44px
-		font-size: 20px
-		color: white
-		line-height: 44px
-		cursor: pointer
-		overflow: hidden
-		z-index: 5000
-
-		&.on
-			overflow: visible
-
-		.readout
-			padding-left: 10px
-			padding-right: 40px
-			transition: 0.3s
-
-			&:after
-				content: ""
-				position: absolute
-				top: 22px
-				right: 10px
-				width: 0
-				height: 0
-				border-style: solid
-				border-width: 6px 6px 0 6px
-				border-color: white transparent transparent transparent
-				transition: 0.3s
-
-		.readout:hover
-			background-color: transparentize(white, 0.9)
-
-		&.on .readout
-			background-color: $light-grey
-			color: $dark-grey
-
-		&.on .readout:after
-			border-top-color: $dark-grey
-
-		.wrapper
-			position: absolute
-			top: 100%
-			left: 0
-			width: 100%
-
-		a
-			display: block
-			width: 100%
-			height: 30px
-			line-height: 30px
-			padding: 0 10px
-			font-size: 16px
-			font-weight: 300
-			background-color: $light-grey
-			color: $dark-grey
-			opacity: 0
-			transition: 0.3s
-
-			&:hover
-				background-color: #cccccc
-
-		&.on a
-			opacity: 1
 
 #encyclopedia
 	position: relative
@@ -598,10 +536,11 @@ section
 		height: 100%
 		background-color: white
 		overflow: auto
-		transition: width 0.3s
+		transition: 0.3s
 
 	&.on .sled
-		width: 100vw
+		width: 400px
+		max-width: 100vw
 
 	.top-bar
 		height: 0
